--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			</form>
 		</div>
 	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type = 'text/javascript' async='true' ></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script>
 	  WebFont.load({
 	    google: {
