--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
 			</form>
 		</div>
 	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script>
 	  WebFont.load({
 	    google: {
 	      families: ['Montserrat', 'Allerta']
 	    }
 	  });
-	</script>
-<!-- 	<script type="text/javascript">
+	</script> -->
+	<script type="text/javascript">
 	  WebFontConfig = {
 	    google: { families: ['Montserrat', 'Allerta'] }
 	  };
@@ -134,7 +134,7 @@
 	    wf.async = 'true';
 	    var s = document.getElementsByTagName('script')[0];
 	    s.parentNode.insertBefore(wf, s);
-	  })(); </script> -->
+	  })(); </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
 	<script src="js/invie.js" async></script>
